# OblivionisAgent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  SECURITY.md  THIRD-PARTY-NOTICES.md  config.example.json  package.json  pnpm-lock.yaml  rebuild-deploy.bat  release.bat  tsconfig.base.json
.claude/docs/: architecture.md  conventions.md  extending.md  pitfalls.md  research-hermes-oauth.md  vision-agentic-roadmap.md  workflows.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: splash.html
apps/desktop/src/: App.tsx  ErrorBoundary.tsx  Mascot.tsx  bridge-client.ts  main.tsx  styles.css  usePointerReorder.ts
apps/desktop/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: pty_diamond.rs  pty_hr.rs  pty_nl.rs  pty_probe.rs  pty_resume.rs  pty_smoke.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/desktop/src/canvas/: AlignBar.tsx  FlowCanvas.tsx  HelperLines.tsx  ZoomIndicator.tsx  edge-context.ts  edge-runtime-context.ts  helper-lines.ts  node-action-context.ts  node-meta-context.ts
apps/desktop/src/canvas/edges/: ConditionEdge.tsx
apps/desktop/src/canvas/nodes/: ClaudeSessionNode.tsx  CronNode.tsx  FeishuGroupNode.tsx  IntentSwitchNode.tsx  LoopNode.tsx  NodeShell.tsx  RouteNode.tsx  SkillNode.tsx  SoulNode.tsx  SubagentNode.tsx  WebhookNode.tsx
apps/desktop/src/i18n/: en.ts  index.tsx
apps/desktop/src/layout/: FleetBoard.tsx  GlanceChips.tsx  HomeView.tsx  IconRail.tsx  SessionSidebar.tsx  StatusBar.tsx  UpdateBanner.tsx  icons.tsx
apps/desktop/src/panels/: AuditPanel.tsx  CostPanel.tsx  CostWindow.tsx  DocViewer.tsx  FeishuPanel.tsx  InboxPanel.tsx  LogPanel.tsx  MarkdownViewer.tsx  ReportsPanel.tsx  TerminalsHost.tsx  TranscriptPanel.tsx
docs/: html-design.skill.md  loop-p4-skill-template.md  loop-skill-template.md  loop-测试.md  presentation.html  trends-report-2026-06.html
docs/screenshots/: README.md
scripts/: gen-icon.mjs  gen-notices.cjs  release.mjs  vscode-sessions.mjs
