[package]
name = "oblivionis-desktop"
version = "0.4.1"
description = "OblivionisAgent desktop (Tauri)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "oblivionis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
# 飞书 App Secret 存进 Windows 凭据管理器（不再明文落 config.json）
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
vte = "0.11"
