[package]
name = "oblivionis-desktop"
version = "0.9.9"
description = "OblivionisAgent desktop (Tauri)"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-only"
publish = false

[lib]
name = "oblivionis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
# 自动更新：updater 下载/安装签名过的新版安装包；process 用于装完重启
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
# 飞书 App Secret 存进 Windows 凭据管理器（不再明文落 config.json）
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
vte = "0.11"
